feat: add preloader, improved sorting mechanism, create music library
- Require login before uploading music
- Applied custom scroll to all pages
- Add preloader for smoother UX
- Filtering music by type (favorite & uploaded)
- Improved search functionality and add it to all pages
- Add footer to all pages
- Improved sorting mechanism
- Create music library to store records relating to music and a user

--- a/public/css/levels.css
+++ b/public/css/levels.css
@@ -203,11 +203,11 @@
   /* border: none; */
 }
 
-.level-img {
+.level-img-big {
   /* background-color: #e1e1e1; */
   display: block;
   margin: auto;
-  width: 5rem;
+  width: 7rem;
   /* height: auto; */
   margin-top: 15px;
   margin-bottom: 0;
