--- a/src/views/dashboard/upload.ejs
+++ b/src/views/dashboard/upload.ejs
@@ -273,6 +273,7 @@
             />.
           </span>
           <input type="hidden" name="video" value="" />
+					<div class="file-name text-truncate" id="download"></div>
           <div class="file-details" style="display: none">
             <i
               class="fas fa-file-video"
