--- a/src/views/piano/piano.ejs
+++ b/src/views/piano/piano.ejs
@@ -43,112 +43,114 @@
 </head>
 
 <body>
-	<div class="piano-wrapper">
-		<header class="piano-header">
-			<h2 onclick="location.href='/'" style="cursor: pointer;"><img src="/assets/images/logo.png"> FUNKEY </h2>
 
-			<!-- Think about making the bottom borders dynamic -->
-			<div class="piano-control note-display dropdown" id="play-note" data-toggle="tooltip" title="Show Melodies"
-				data-placement="right" data-animation="false">
-				<h4>
-					Play
-				</h4>
-				<div class="dropydown-menu overflow-y-auto" style="display: none">
-					<span class="dropydown-item text-truncate piano-melody" data-path="jingle-bells.txt">Jingle Bells</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="happy-birthday.txt">Happy Birthday</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="twinkle-twinkle.txt">Twinkle, Twinkle,
-						Little Star</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="ode-to-joy.txt">Ode to Joy</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="bohemian-rhapsody.txt">Bohemian
-						Rhapsody</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="mary-little-lamb.txt">Mary Had a Little
-						Lamb</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="are-u-sleeping.txt">Are You Sleeping</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="row-ur-boat.txt">Row Your Boat</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="yankee-doodle.txt">Yankee Doodle</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="london-bridge.txt">London Bridge is
-						Falling</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="frere-jacques.txt">Frère Jacques</span>
-					<span class="dropydown-item text-truncate piano-melody" data-path="this-old-man.txt">This Old Man</span>
+		<div class="piano-wrapper">
+			<header class="piano-header">
+				<h2 onclick="location.href='/'" style="cursor: pointer;"><img src="/assets/images/logo.png"> FUNKEY </h2>
+
+				<!-- Think about making the bottom borders dynamic -->
+				<div class="piano-control note-display dropdown" id="play-note" data-toggle="tooltip" title="Show Melodies"
+					data-placement="right" data-animation="false">
+					<h4>
+						Play
+					</h4>
+					<div class="dropydown-menu overflow-y-auto" style="display: none">
+						<span class="dropydown-item text-truncate piano-melody" data-path="jingle-bells.txt">Jingle Bells</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="happy-birthday.txt">Happy Birthday</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="twinkle-twinkle.txt">Twinkle, Twinkle,
+							Little Star</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="ode-to-joy.txt">Ode to Joy</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="bohemian-rhapsody.txt">Bohemian
+							Rhapsody</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="mary-little-lamb.txt">Mary Had a Little
+							Lamb</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="are-u-sleeping.txt">Are You
+							Sleeping</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="row-ur-boat.txt">Row Your Boat</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="yankee-doodle.txt">Yankee Doodle</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="london-bridge.txt">London Bridge is
+							Falling</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="frere-jacques.txt">Frère Jacques</span>
+						<span class="dropydown-item text-truncate piano-melody" data-path="this-old-man.txt">This Old Man</span>
+					</div>
 				</div>
-			</div>
-			<div class="piano-control keys-checkbox">
-				<span>Show Keys</span><input type="checkbox" checked>
-			</div>
-		</header>
+				<div class="piano-control keys-checkbox">
+					<span>Show Keys</span><input type="checkbox" checked>
+				</div>
+			</header>
 
-		<ul class="piano-keys">
-			<li class="piano-key piano-white" data-key="a" data-note="C4"><span>a</span></li>
-			<li class="piano-key piano-black" data-key="w" data-note="C4#"><span>w</span></li>
-			<li class="piano-key piano-white" data-key="s" data-note="D4"><span>s</span></li>
-			<li class="piano-key piano-black" data-key="e" data-note="D4#"><span>e</span></li>
-			<li class="piano-key piano-white" data-key="d" data-note="E4"><span>d</span></li>
-			<li class="piano-key piano-white" data-key="f" data-note="F4"><span>f</span></li>
-			<li class="piano-key piano-black" data-key="t" data-note="F4#"><span>t</span></li>
-			<li class="piano-key piano-white" data-key="g" data-note="G4"><span>g</span></li>
-			<li class="piano-key piano-black" data-key="y" data-note="G4#"><span>y</span></li>
-			<li class="piano-key piano-white" data-key="h" data-note="A4"><span>h</span></li>
-			<li class="piano-key piano-black" data-key="u" data-note="A#4"><span>u</span></li>
-			<li class="piano-key piano-white" data-key="j" data-note="B4"><span>j</span></li>
-			<li class="piano-key piano-white" data-key="k" data-note="C5"><span>k</span></li>
-			<li class="piano-key piano-black" data-key="o" data-note="C5#"><span>o</span></li>
-			<li class="piano-key piano-white" data-key="l" data-note="D5"><span>l</span></li>
-			<li class="piano-key piano-black" data-key="p" data-note="D5#"><span>p</span></li>
-			<li class="piano-key piano-white" data-key=";" data-note="E5"><span>;</span></li>
-		</ul>
+			<ul class="piano-keys">
+				<li class="piano-key piano-white" data-key="a" data-note="C4"><span>a</span></li>
+				<li class="piano-key piano-black" data-key="w" data-note="C4#"><span>w</span></li>
+				<li class="piano-key piano-white" data-key="s" data-note="D4"><span>s</span></li>
+				<li class="piano-key piano-black" data-key="e" data-note="D4#"><span>e</span></li>
+				<li class="piano-key piano-white" data-key="d" data-note="E4"><span>d</span></li>
+				<li class="piano-key piano-white" data-key="f" data-note="F4"><span>f</span></li>
+				<li class="piano-key piano-black" data-key="t" data-note="F4#"><span>t</span></li>
+				<li class="piano-key piano-white" data-key="g" data-note="G4"><span>g</span></li>
+				<li class="piano-key piano-black" data-key="y" data-note="G4#"><span>y</span></li>
+				<li class="piano-key piano-white" data-key="h" data-note="A4"><span>h</span></li>
+				<li class="piano-key piano-black" data-key="u" data-note="A#4"><span>u</span></li>
+				<li class="piano-key piano-white" data-key="j" data-note="B4"><span>j</span></li>
+				<li class="piano-key piano-white" data-key="k" data-note="C5"><span>k</span></li>
+				<li class="piano-key piano-black" data-key="o" data-note="C5#"><span>o</span></li>
+				<li class="piano-key piano-white" data-key="l" data-note="D5"><span>l</span></li>
+				<li class="piano-key piano-black" data-key="p" data-note="D5#"><span>p</span></li>
+				<li class="piano-key piano-white" data-key=";" data-note="E5"><span>;</span></li>
+			</ul>
 
-		<div class="piano-control volume-slider"
-			style="display: flex; flex-direction: row; align-items: center; gap: 0.5em">
-			<!-- <i class="fa fa-chevron-left chevron" aria-hidden="true"></i>
+			<div class="piano-control volume-slider"
+				style="display: flex; flex-direction: row; align-items: center; gap: 0.5em">
+				<!-- <i class="fa fa-chevron-left chevron" aria-hidden="true"></i>
 			<i class="fa fa-chevron-right chevron" aria-hidden="true"></i> -->
-			<i class="fa fa-volume-up volume-icon text-light" aria-hidden="true"></i>
-			<section class="rangeWrap">
-				<input class="volume-control" type="range" list="ticks" value="0.457" min="0" max="1" step="any" />
-				<datalist id="ticks">
-					<option value="0" label="0%"></option>
-					<option value="25" label="25%"></option>
-					<option value="50" label="50%"></option>
-					<option value="75" label="75%"></option>
-					<option value="100" label="100%"></option>
-				</datalist>
-			</section>
+				<i class="fa fa-volume-up volume-icon text-light" aria-hidden="true"></i>
+				<section class="rangeWrap">
+					<input class="volume-control" type="range" list="ticks" value="0.457" min="0" max="1" step="any" />
+					<datalist id="ticks">
+						<option value="0" label="0%"></option>
+						<option value="25" label="25%"></option>
+						<option value="50" label="50%"></option>
+						<option value="75" label="75%"></option>
+						<option value="100" label="100%"></option>
+					</datalist>
+				</section>
+			</div>
 		</div>
-	</div>
 
-	<!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+		<!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 		crossorigin="anonymous"></script> -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+		<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
 		crossorigin="anonymous"></script> -->
 
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-	<script src="/js/piano.js" defer></script>
-	<script>
-		$(document).ready(function () {
-			// $(function () {
-			// });
-			$('[data-toggle="tooltip"]').tooltip();
+		<script src="/js/piano.js" defer></script>
+		<script>
+			$(document).ready(function () {
+				// $(function () {
+				// });
+				$('[data-toggle="tooltip"]').tooltip();
 
-			$("#play-note").mouseenter(function () {
-				var title = $(this).attr('title');;
-				$(this).attr('title', title);
+				$("#play-note").mouseenter(function () {
+					var title = $(this).attr('title');;
+					$(this).attr('title', title);
+				});
+
+				$(window).click(function () {
+					$("#play-note h4").next().hide();
+				});
+
+				$('#play-note').click(function () {
+					$("#play-note h4").next().toggle();
+					event.stopPropagation();
+				});
 			});
-
-			$(window).click(function () {
-				$("#play-note h4").next().hide();
-			});
-
-			$('#play-note').click(function () {
-				$("#play-note h4").next().toggle();
-				event.stopPropagation();
-			});
-		});
-	</script>
-	<script src="/js/particles.js"></script>
+		</script>
+		<script src="/js/particles.js"></script>
 </body>
 
 </html>
