--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -8,8 +8,8 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-		rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch+Pop&display=swap" rel="stylesheet">
+		rel="preload">
+	<link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch+Pop&display=swap" rel="preload">
 
 	<!-- Bootstrap core CSS -->
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,8 +27,9 @@
 	<!-- Additional CSS Files -->
 	<link rel="stylesheet" href="/css/funkey.css">
 	<link rel="stylesheet" href="/css/homepage.css">
-	<link rel="stylesheet" href="/css/levels.css">
 	<link rel="stylesheet" href="/css/toasts.css">
+	<link rel="stylesheet" href="/css/scroll.css">
+	<link rel="stylesheet" href="/css/levels.css">
 
 	<link rel="shortcut icon" href="assets/icon/funkey.ico" type="image/x-icon">
 
@@ -84,7 +85,7 @@
 			background-color: #1f2122dd !important;
 		}
 
-		.clip-thumbnail {
+		.clips .clip-thumbnail {
 			position: relative;
 			display: block;
 			width: 4.5rem;
@@ -96,7 +97,7 @@
 			opacity: 0.85;
 		}
 
-		.clip-thumbnail .overlay {
+		.clips .clip-thumbnail .overlay {
 			width: 100%;
 			height: 100%;
 			background-color: #fff3;
@@ -106,12 +107,12 @@
 			cursor: pointer;
 		}
 
-		.clip-thumbnail .overlay:hover {
+		.clips .clip-thumbnail .overlay:hover {
 			opacity: 0.9;
 		}
 
-		.clip-thumbnail .overlay,
-		.clip-thumbnail .overlay i {
+		.clips .clip-thumbnail .overlay,
+		.clips .clip-thumbnail .overlay i {
 			display: block;
 			position: absolute;
 			left: 50% !important;
@@ -150,19 +151,8 @@
 </head>
 
 <body>
-
 	<!-- ***** Preloader Start ***** -->
-	<div id="js-preloader" class="js-preloader" style="display: none">
-		<div class="preloader-inner">
-			<span class="dot"></span>
-			<div class="dots">
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-	</div>
-	<!-- ***** Preloader End ***** -->
+	<%- include('partials/preload.ejs') %>
 
 	<!-- ***** Header Area Start ***** -->
 	<header class="header-area header-sticky">
@@ -171,41 +161,38 @@
 				<div class="col-12">
 					<nav class="main-nav">
 						<!-- ***** Logo Start ***** -->
-						<a href="index.html" class="logo">
-							<img src="assets/images/logo.png" alt="">
+						<a href="/" class="logo">
+							<img src="/assets/images/logo.png" alt="">
+							<h4 class="logo-header">
+								FunKey
+							</h4>
 						</a>
 						<!-- ***** Logo End ***** -->
-						<!-- ***** Search End ***** -->
-						<div class="search-input">
-							<form id="search" action="#">
-								<input type="text" placeholder="Type Something" id='searchText' name="searchKeyword"
-									onkeypress="handle" />
-								<i class="fa fa-search"></i>
-							</form>
-						</div>
-						<!-- ***** Search End ***** -->
-						<!-- ***** Menu Start ***** -->
-						<ul class="nav">
-							<li><a href="/">Home</a></li>
-							<li><a href="/browse">Browse</a></li>
-							<li><a href="/practice">Practice</a></li>
-							<li><a href="/piano">Piano</a></li>
-							<!-- <li><a href="/match">Match</a></li> -->
-							<% if (!user) { %>
-								<li class="login"><a href="/login" class="active">Login</a></li>
-								<% } else { %>
-									<li>
-										<a href="/profile" class="active profile-pic-cont">Profile <span>
-												<img class="profile-pic" src="<%= user.avatar %>" alt=""></span>
-										</a>
-									</li>
-									<% } %>
-										<!-- <li><a href="profile.html">Login <img src="assets/images/logo.png" alt=""></a></li> -->
-						</ul>
-						<a class='menu-trigger'>
-							<span>Menu</span>
-						</a>
-						<!-- ***** Menu End ***** -->
+
+						<!-- Search -->
+						<%- include('partials/search.ejs') %>
+							<!-- ***** Menu Start ***** -->
+							<ul class="nav">
+								<li><a href="/">Home</a></li>
+								<li><a href="/browse">Browse</a></li>
+								<li><a href="/practice">Practice</a></li>
+								<li><a href="/piano">Piano</a></li>
+								<!-- <li><a href="/match">Match</a></li> -->
+								<% if (!user) { %>
+									<li class="login"><a href="/login" class="active">Login</a></li>
+									<% } else { %>
+										<li>
+											<a href="/profile" class="active profile-pic-cont">Profile <span>
+													<img class="profile-pic" src="<%= user.avatar %>" alt=""></span>
+											</a>
+										</li>
+										<% } %>
+											<!-- <li><a href="profile.html">Login <img src="assets/images/logo.png" alt=""></a></li> -->
+							</ul>
+							<a class='menu-trigger'>
+								<span>Menu</span>
+							</a>
+							<!-- ***** Menu End ***** -->
 					</nav>
 				</div>
 			</div>
@@ -266,8 +253,7 @@
 										</div>
 									</div>
 
-									<% // JavaScript code to convert milliseconds to a human-readable format const
-										timeInMs=user.watchHour; const totalMinutes=Math.floor(timeInMs / (1000 * 60)); const
+									<% const timeInMs=user.watchHour; const totalMinutes=Math.floor(timeInMs / (1000 * 60)); const
 										hours=Math.floor(totalMinutes / 60); const minutes=totalMinutes % 60; const
 										formattedTime=`${hours}hrs ${minutes}min`; %>
 
@@ -399,180 +385,177 @@
 		</div>
 	</div>
 
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+	<!-- Footer -->
+	<%- include('partials/footer.ejs') %>
 
-						<br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
-					</p>
-				</div>
-			</div>
+
+
+		<!-- Modals -->
+		<div class="modal fade levels-modal" tabindex="-1" id="levelsModal" aria-labelledby="levelsModalLabel"
+			aria-hidden="true">
+			<%- include('partials/levels.ejs') %>
 		</div>
-	</footer>
+		<div class="modal fade edit-modal" tabindex="-1" id="editModal" aria-labelledby="levelsModalLabel"
+			aria-hidden="true">
+			<%- include('partials/edit-profile.ejs') %>
+		</div>
 
 
 
-	<!-- Modals -->
-	<div class="modal fade levels-modal" tabindex="-1" id="levelsModal" aria-labelledby="levelsModalLabel"
-		aria-hidden="true">
-		<%- include('levels.ejs') %>
-	</div>
-	<div class="modal fade edit-modal" tabindex="-1" id="editModal" aria-labelledby="levelsModalLabel" aria-hidden="true">
-		<%- include('edit-profile.ejs') %>
-	</div>
+		<!-- Scripts -->
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+			</script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+			integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+			</script>
 
+		<script src="/js/toasts.js"></script>
+		<script src="/js/popup.js" defer></script>
+		<script src="/js/custom.js" defer></script>
+		<script src="/js/levels.js" defer></script>
+		<!-- <script src="/js/upload.js" defer></script> -->
+		<script src="/js/affirm.js"></script>
+		<script src="/js/lazyLoad.js"></script>
+		<script src="/js/sorting.js" defer></script>
+		<script src="/js/search.js" defer></script>
 
-	<!-- Scripts -->
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+		<script>
+			document.addEventListener('DOMContentLoaded', () => {
+				window.lazyLoadImages('.lazy-image', { threshold: 0.7 });
+			});
 		</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-		integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
+
+		<script defer>
+			$(document).ready(function () {
+				$('.logout-btn').on('click', function (e) {
+					e.preventDefault();
+					affirm('Are u sure, you want to logout?').then((affirmed) => {
+						if (affirmed) location.href = '/logout';
+					});
+				});
+			}); // doc ready
+
 		</script>
 
-	<script src="/js/popup.js" defer></script>
-	<script src="/js/custom.js" defer></script>
-	<script src="/js/levels.js" defer></script>
-	<!-- <script src="/js/upload.js" defer></script> -->
-	<script src="/js/toasts.js"></script>
-	<script src="/js/affirm.js"></script>
 
-	<script defer>
-		$(document).ready(function () {
-			$('.logout-btn').on('click', function (e) {
-				e.preventDefault();
-				affirm('Are u sure, you want to logout?').then((affirmed) => {
-					if (affirmed) location.href = '/logout';
-				});
-			});
-		}); // doc ready
+		<script defer>
+			$(document).ready(function () {
+				// $('#levelsModal').modal('show');
 
-	</script>
+				/* eslint-disable no-undef */
+				// const clips = JSON.parse('<%- JSON.stringify(musics).replace(/\\/g, `\\\\`).replace(/\'/g, `\\\\`) %>');
+				const clips = JSON.parse('<%- JSON.stringify(musics).replace(/\\/g, `\\\\`).replace(/\'/g, `\\`) %>');
+				/* eslint-enable no-undef */
 
+				// Function to find item by id
+				function findClipById(id) {
+					return clips.find(item => item._id === id);
+				}
 
-	<script defer>
-		$(document).ready(function () {
-			// $('#levelsModal').modal('show');
+				// Event listener for item clicks
+				$('.clips .music-clip').each((index, element) => {
+					$(element).find('.clip-thumbnail, .clip-title').each((_, launcher) => {
+						$(launcher).on('click', function (event) {
 
-			/* eslint-disable no-undef */
-			// const clips = JSON.parse('<%- JSON.stringify(musics).replace(/\\/g, `\\\\`).replace(/\'/g, `\\\\`) %>');
-			const clips = JSON.parse('<%- JSON.stringify(musics).replace(/\\/g, `\\\\`).replace(/\'/g, `\\`) %>');
-			/* eslint-enable no-undef */
+							console.log('launching modal...');
+							const clipId = $(launcher).data('id');
+							const clip = findClipById(clipId);
+							if (clip) {
+								console.log('launched');
+								$('#levelsModal .level-selector-title').text(`${clip.artist} - ${clip.title}`);
+								$('#levelsModal .thumbnail-img').attr('src', clip.thumbnail);
+								$('#levelsModal input[name="music"]').val(clip._id);
 
-			console.log('clips:', clips);
-
-			// Function to find item by id
-			function findClipById(id) {
-				return clips.find(item => item._id === id);
-			}
-
-			// Event listener for item clicks
-			$('.music-clip').each((index, element) => {
-				console.log('element:', element);
-				$(element).find('.clip-thumbnail, .clip-title').each((_, launcher) => {
-					$(launcher).on('click', function (event) {
-
-						console.log('launching modal...');
-						const clipId = $(launcher).data('id');
-						const clip = findClipById(clipId);
-						if (clip) {
-							console.log('launched');
-							$('#levelsModal .level-selector-title').text(`${clip.artist} - ${clip.title}`);
-							$('#levelsModal .thumbnail-img').attr('src', clip.thumbnail);
-							$('#levelsModal input[name="music"]').val(clip._id);
-
-							$('.levels-form').find('.thumbnail-img-overlay i').removeClass('far fas');
-							if (clip.favorite)
-								$('.levels-form').find('.thumbnail-img-overlay i').addClass('fas');
-							else $('.levels-form').find('.thumbnail-img-overlay i').addClass('far');
-							$('#levelsModal').modal('show');
-						}
-					})
-				});
-			});
-
-
-
-			$('.edit-avatar').click(function (e) {
-				e.preventDefault();
-				$('#thumbnail-upload').trigger('click');
-			});
-
-			$('#thumbnail-upload').on('cancel', () => {
-				console.log('Cancelled.');
-			});
-
-			$('#thumbnail-upload').on('change', function () {
-				let element = $(this).prev()[0];
-				let file = this.files[0];
-				let type = element.dataset.type;
-
-				var formData = new FormData();
-				formData.append('file', file);
-				formData.append('type', type);
-
-				const xhr = new XMLHttpRequest();
-				xhr.open('POST', '/upload', true);
-
-				xhr.onreadystatechange = () => {
-					if (xhr.readyState === 4 && xhr.status === 200) {
-						console.log('Upload complete!');
-						let response = JSON.parse(xhr.response);
-						$('.edit-avatar').css('background-image', `url('/${response.path}')`);
-						$('.edit-avatar').find('input[name="avatar"]').val(`${response.path}`);
-						toastSuccess('Thumbnail uploaded successfully!');
-					} else if (xhr.readyState == 4) {
-						let response = { error: 'nothing' };
-						if (xhr.responseText) {
-							try {
-								response = JSON.parse(xhr.responseText);
-								console.log('response:', response);
-							} catch (e) {
-								console.error('Parsing error:', e);
+								$('.levels-form').find('.thumbnail-img-overlay i').removeClass('far fas');
+								if (clip.favorite)
+									$('.levels-form').find('.thumbnail-img-overlay i').addClass('fas');
+								else $('.levels-form').find('.thumbnail-img-overlay i').addClass('far');
+								$('#levelsModal').modal('show');
 							}
-						} else {
-							console.warn('Empty response');
+						})
+					});
+				});
+
+
+
+				$('.edit-avatar').click(function (e) {
+					e.preventDefault();
+					$('#thumbnail-upload').trigger('click');
+				});
+
+				$('#thumbnail-upload').on('cancel', () => {
+					console.log('Cancelled.');
+				});
+
+				$('#thumbnail-upload').on('change', function () {
+					let element = $(this).prev()[0];
+					let file = this.files[0];
+					let type = element.dataset.type;
+
+					var formData = new FormData();
+					formData.append('file', file);
+					formData.append('type', type);
+
+					const xhr = new XMLHttpRequest();
+					xhr.open('POST', '/upload', true);
+
+					xhr.onreadystatechange = () => {
+						if (xhr.readyState === 4 && xhr.status === 200) {
+							console.log('Upload complete!');
+							let response = JSON.parse(xhr.response);
+							$('.edit-avatar').css('background-image', `url('/${response.path}')`);
+							$('.edit-avatar').find('input[name="avatar"]').val(`${response.path}`);
+							toastSuccess('Thumbnail uploaded successfully!');
+						} else if (xhr.readyState == 4) {
+							let response = { error: 'nothing' };
+							if (xhr.responseText) {
+								try {
+									response = JSON.parse(xhr.responseText);
+									console.log('response:', response);
+								} catch (e) {
+									console.error('Parsing error:', e);
+								}
+							} else {
+								console.warn('Empty response');
+							}
 						}
-					}
-				};
+					};
 
-				xhr.send(formData);
-			});
+					xhr.send(formData);
+				});
 
 
-			$('#edit-form').on('submit', function (e) {
-				e.preventDefault();
-				const formData = new FormData(this);
+				$('#edit-form').on('submit', function (e) {
+					e.preventDefault();
+					const formData = new FormData(this);
 
-				$('.spinner-overlay').show();
-				fetch('/profile/edit', {
-					method: 'PUT',
-					headers: {
-						'Accept': 'application/json'
-					},
-					body: formData
-				}).then(res => {
-					if (!res.ok) return res.json().then(err => Promise.reject(err));
-					return res.json();
-				}).then(res => {
-					$('.spinner-overlay').hide();
-					console.log('res:', res);
-					toastSuccess(res.message);
-					$('#editModal').modal('hide');
-					setTimeout(() => {
-						location.reload();
-					}, 100);
-				}).catch(err => {
-					console.error(err);
+					$('.spinner-overlay').show();
+					fetch('/profile/edit', {
+						method: 'PUT',
+						headers: {
+							'Accept': 'application/json'
+						},
+						body: formData
+					}).then(res => {
+						if (!res.ok) return res.json().then(err => Promise.reject(err));
+						return res.json();
+					}).then(res => {
+						$('.spinner-overlay').hide();
+						console.log('res:', res);
+						toastSuccess(res.message);
+						$('#editModal').modal('hide');
+						setTimeout(() => {
+							location.reload();
+						}, 100);
+					}).catch(err => {
+						console.error(err);
+					});
 				});
 			});
-		});
-	</script>
+		</script>
 
 </body>
 
