feat: Refactor favoriting process and add edit mode for uploads
- Improved the favoriting process by making it more efficient and user-friendly.
- Added an edit mode for uploads, allowing users to modify their uploaded content.

--- a/src/views/browse.ejs
+++ b/src/views/browse.ejs
@@ -218,7 +218,7 @@
 						<div class="gaming-library">
 							<div class="col-lg-12">
 								<div class="heading-section">
-									<h4><em>Your Music</em> Library</h4>
+									<h4 class="library-filter-title"><em>Your Musics</em> &nbsp;<span></span></h4>
 									<div class="dropdown">
 										<button class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
 											type="button">
