--- a/src/views/dashboard/upload.ejs
+++ b/src/views/dashboard/upload.ejs
@@ -198,6 +198,7 @@
   </div>
 
   <form id="upload-form" class="upload-container modal-content">
+		<input type="hidden" name="musicId" value="" />
     <div class="upload-header modal-header">
       <h5 class="upload-title modal-title" id="uploadModalLabel">
         Upload Music 🎧
